  important use cases.

* Long-running queries will now time out.  Two new configuration properties in
  ParliamentKbConfig.txt, TimeoutDuration and TimeoutUnit, control this behavior.

* Added configuration settings that enable linear growth of Parliament's resource and
  statement tables.  The old behavior (geometric growth) is still available, but
  disabled by default.

* Refactored ParliamentConfig.txt into two configuration files, ParliamentKbConfig.txt
  and ParliamentLogConfig.txt.  The latter configures Parliament's native code logging,
  and the latter configures everything else.  (The reason: Logging is configured at
  static initialization time, but the ParliamentConfig.txt file was not specified until
  later, forcing messy initialization code.)

* Changed the default KB directory from "." (the current working directory) to "kb-data"

* Removed the old-style binary zip file from the build infrastructure and documentation,
  and renamed the "quick start" binaries to indicate their status as the new standard.
  Also added javadocs.

* Fixed a bug that increased the likelihood that an ungraceful shutdown would corrupt
  the data files

* Fixed a rule engine bug that caused a runaway recursion in rare circumstances

* Fixed a rule engine bug, in which trigger lists were updated from within a loop over
  those lists' contents

* Fixed a bug that prevented the Admin web page from showing running queries due to a
  JSON parse error

* Fixed a few bugs in the temporal index implementation and unit tests

* Updated C++ code to use Boost.FileSystem and the Win32 wide character (UTF-16) API

* Numerous updates to C++ code to modernize towards C++14

* Updated to Boost 1.69.0 and MSVC 14.1 (Visual Studio 2017, 15.9.7)



=================================================

Version 2.7.11 (7/17/2017, revision 751):

* Added logging to the native code layer.

* Changed the default settings so that the inference rules for functional and